test/invalid/baseline/inheritance-typeless.txt
Syntax error at line 1, since `interface X`:
interface X: {};
             ^ Inheritance lacks a type
